# ImageCluster

./: .gitignore  Cluster.cpp  Cluster.h  ImageCluserHeader.h  ImageCluster.cpp  ImageCluster.h  PinDetection.cpp  PinDetection.h  README.MD  README.md  Source.cpp  readme.md  test.sln  test.vcxproj  test.vcxproj.filters
ImageCluster/: Cluster.cpp  Cluster.h  ImageCluserHeader.h  ImageCluster.h
PinDetection/: PinDetection.cpp  PinDetection.h  Source.cpp
application/PinDetection/: CMakeLists.txt  PinDetection.h  README.md  Source.cpp
application/PinDetection/work_in_ros/: README.md
application/PinDetection/work_in_ros/pin_detection_pkg/: CMakeLists.txt  package.xml
application/PinDetection/work_in_ros/pin_detection_pkg/msg/: pin_detection_result.msg  pin_detection_unit.msg
application/PinDetection/work_in_ros/pin_detection_pkg/src/: PinDetection.h  image_publisher.cpp  image_subscriber.cpp
application/PinDetection/work_in_ros/pin_detection_pkg/src/ImageCluster/: Cluster.cpp  ImageCluster.cpp  ImageCluster.h
test/: ImageCluster.cpp  test.vcxproj  test.vcxproj.filters
